test/tests/stages/18_structures/invalid_struct_tags/sizeof_undeclared.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  sizeof
  (
  struct
  identifier(c)
  )
  ;
  }
  struct
  identifier(c)
  {
  int
  identifier(x)
  ;
  }
  ;
